kubernetes/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local.syspawn.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
  tls:
    secretName: local-syspawn-com-tls
